--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,7 +16,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
-                default_target_path: /user
+                default_target_path: /client
 
             logout:
               path: /logout
@@ -25,5 +25,6 @@ security:
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: ROLE_USER }
+        - { path: ^/user/new/manager$, role: ROLE_ADMIN }
         - { path: ^/user, role: ROLE_MANAGER }
+        - { path: ^/, role: ROLE_USER }
